--- a/Ej1_TaTeTi/TaTeTiWeb/Site.Master
+++ b/Ej1_TaTeTi/TaTeTiWeb/Site.Master
@@ -47,14 +47,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
+                    <a class="navbar-brand" runat="server" href="~/">Ta-Te-Ti Web</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Inicio</a></li>
                         <li><a runat="server" href="~/Tablero">Juego</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
+                        <li><a runat="server" href="~/Historial">Historial</a></li>
                     </ul>
                 </div>
             </div>
