mejoras en la aplicación web

--- a/Ej1_TaTeTi/TaTeTiWeb/Site.Master
+++ b/Ej1_TaTeTi/TaTeTiWeb/Site.Master
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
+    <title><%: Page.Title %> - Ta-Te-Ti</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -16,6 +16,7 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+    <link rel="stylesheet" type="text/css" href="Content/mi.css" />
 </head>
 <body>
     <form runat="server">
