--- a/Ej1_TaTeTi/TaTeTiWeb/Content/mi.css
+++ b/Ej1_TaTeTi/TaTeTiWeb/Content/mi.css
@@ -2,8 +2,7 @@
     box-sizing: border-box;
 }
 
-html.open,
-body.open {
+html.open, body.open {
     height: 100%;
     overflow: hidden;
 }
@@ -41,10 +40,7 @@ table {
     display: block;
 }
 
-tr,
-td,
-tbody,
-tfoot {
+tr, td, tbody, tfoot {
     display: block;
 }
 
@@ -61,14 +57,14 @@ td {
     text-align: center;
 }
 
-    td:before {
-        content: attr(data-title);
-        color: #7a91aa;
-        text-transform: uppercase;
-        font-size: 1.4rem;
-        padding-right: 10px;
-        display: block;
-    }
+td:before {
+    content: attr(data-title);
+    color: #7a91aa;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    padding-right: 10px;
+    display: block;
+}
 
 table {
     width: 100%;
@@ -98,7 +94,7 @@ tfoot th {
     font-size: 1.2rem;
     text-decoration: none;
     border-radius: 5px;
-    color: #fff;
+    color: #202932;
     padding: 8px;
     background-color: #4b908f;
 }
@@ -108,9 +104,9 @@ tfoot th {
     border-bottom: 1px solid #28333f;
 }
 
-    .select:before {
-        display: none;
-    }
+.select:before {
+    display: none;
+}
 
 .detail {
     background-color: #bd2a4e;
@@ -131,12 +127,12 @@ tfoot th {
     transition: transform 0.3s ease-out;
 }
 
-    .detail.open {
-        -moz-transform: translateX(0);
-        -ms-transform: translateX(0);
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-    }
+.detail.open {
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+}
 
 .detail-container {
     margin: 0 auto;
@@ -180,21 +176,21 @@ dd {
     transition: border 0.3s linear;
 }
 
-    .close:hover, .close:focus {
-        background-color: #a82545;
-        border: 1px solid #a82545;
-    }
+.close:hover, .close:focus {
+    background-color: #a82545;
+    border: 1px solid #a82545;
+}
 
 @media (min-width: 460px) {
     td {
         text-align: left;
     }
 
-        td:before {
-            display: inline-block;
-            text-align: right;
-            width: 140px;
-        }
+    td:before {
+        display: inline-block;
+        text-align: right;
+        width: 140px;
+    }
 
     .select {
         padding-left: 160px;
@@ -210,8 +206,7 @@ dd {
         display: table-row;
     }
 
-    td,
-    th {
+    td, th {
         display: table-cell;
     }
 
@@ -231,12 +226,11 @@ dd {
         border: 1px solid #28333f;
     }
 
-        td:before {
-            display: none;
-        }
+    td:before {
+        display: none;
+    }
 
-    td,
-    th {
+    td, th {
         padding: 10px;
     }
 
@@ -251,4 +245,29 @@ dd {
     .select {
         padding: 10px;
     }
+}
+
+.boton-imagen {
+    background-image: url('./Resources/N.png');
+    background-size: cover;
+}
+
+/* Tamaño mínimo de los botones */
+.btn-custom {
+    min-width: 50px;
+    min-height: 50px;
+}
+
+/* Tamaño máximo de los botones */
+.btn-custom-lg {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex-column {
+    flex-direction: column;
 }
