--- a/Ej1_TaTeTi/TaTeTiWeb/Site.Master
+++ b/Ej1_TaTeTi/TaTeTiWeb/Site.Master
@@ -1,4 +1,5 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="TaTeTiWeb.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" 
+                            Inherits="TaTeTiWeb.SiteMaster" %>
 
 <!DOCTYPE html>
 
@@ -17,7 +18,7 @@
     
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="Content/mi.css" />
 </head>
 <body>
