--- a/Ej1_TaTeTi/TaTeTiWeb/Site.Master
+++ b/Ej1_TaTeTi/TaTeTiWeb/Site.Master
@@ -14,20 +14,29 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <webopt:BundleReference runat="server" Path="~/Content/css" />
 
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
+    <style>
+
+        
+        @media (max-width: 767px) 
+        {
+            .container.row {
+            min-width: 361px; /* Ajusta este valor según tus necesidades */
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: #cddff3;">
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
-                <asp:ScriptReference Path="https://code.jquery.com/jquery-3.5.1.slim.min.js" />
-                <asp:ScriptReference Path="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.jss" />
-                <asp:ScriptReference Path="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" />
+                <asp:ScriptReference Path="https://code.jquery.com/jquery-3.5.1.slim.min.js"/>
+                <asp:ScriptReference Path="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"  />
+                <asp:ScriptReference Path="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"   />
                 <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
                 <%--Framework Scripts--%>
                 <asp:ScriptReference Name="MsAjaxBundle" />
@@ -44,7 +53,7 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="min-width: 361px">
             <a class="navbar-brand" href="./">Ta-Te-Ti Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MainNavbar"
                 aria-controls="MainNavbar" aria-expanded="false" aria-label="Toggle Navigation">
@@ -64,7 +73,7 @@
             </div>
         </nav>
 
-        <div class="container body-content">
+        <div class="container body-content" style="min-width: 361px">
 
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
